# GB

./: .travis.yml  CMakeLists.txt  main.cpp
core/: CMakeLists.txt  cpu.cpp  cpu.h  emulator.cpp  emulator.h  memory.cpp  memory.h  utils.cpp  utils.h
ui/: CMakeLists.txt  debugwindow.cpp  debugwindow.h  mainwindow.cpp  mainwindow.h  renderwidget.cpp  resources.qrc
